Prevent m2e from also running checkstyle:check during its own incremental/full IDE builds
git-svn-id: https://josm.openstreetmap.de/svn/trunk@19608 0c6e7542-c601-0410-84e7-c038aed88b3b